--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,6 @@
     <color name="white">#FFFFFFFF</color>
     <color name="green">#2dc44d</color>
     <color name="gray">#dfe3e2</color>
+    <color name="dark_blue">#022646</color>
+    <color name="light_blue">#017aff</color>
 </resources>
