--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="gray">#dfe3e2</color>
     <color name="dark_blue">#022646</color>
     <color name="light_blue">#017aff</color>
+    <color name="light_gray">#eff3f2</color>
 </resources>
