--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -81,6 +81,7 @@
             <androidx.appcompat.widget.AppCompatTextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="12dp"
                 android:text="@{searchParameters.getFlightType()}"
                 tools:text="Tek Yön"
                 />
@@ -94,8 +95,10 @@
             <androidx.appcompat.widget.AppCompatTextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:drawableStart="@drawable/ic_account"
                 android:text="@{searchParameters.passengerCount()}"
                 tools:text="1"
+                android:drawablePadding="4dp"
                 />
 
         </androidx.appcompat.widget.LinearLayoutCompat>
@@ -130,7 +133,7 @@
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tabLayout"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
         android:layout_marginEnd="8dp"
@@ -229,6 +232,7 @@
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/viewPager"
         android:layout_width="match_parent"
+        android:backgroundTint="@color/light_gray"
         android:layout_height="0dp"
         android:layout_below="@id/order_filter_buttons"
         android:layout_centerInParent="true"
