--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -54,6 +54,7 @@
         <androidx.appcompat.widget.AppCompatTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textStyle="bold"
             android:layout_marginStart="12dp"
             android:layout_marginBottom="12dp"
             android:text="@{origin.unicodeToTurkish()}"
@@ -70,6 +71,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="12dp"
+            android:textStyle="bold"
             android:text="@{destination.unicodeToTurkish()}"
             android:layout_marginBottom="12dp"
             tools:text="İstanbul" />
@@ -90,7 +92,7 @@
                 android:layout_width="1dp"
                 android:layout_marginHorizontal="12dp"
                 android:layout_height="match_parent"
-                android:background="#FF0000FF" />
+                android:background="#000000" />
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:layout_width="wrap_content"
@@ -138,26 +140,31 @@
         android:layout_marginTop="12dp"
         android:layout_marginEnd="8dp"
         app:tabInlineLabel="true"
+        app:tabGravity="fill"
+        style="@style/tablayout"
         app:layout_constraintEnd_toStartOf="@+id/appCompatImageView4"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat3"
-        app:tabMode="fixed"
+        app:tabMode="scrollable"
         app:tabSelectedTextColor="@color/green"
         app:tabTextColor="@color/black">
 
         <com.google.android.material.tabs.TabItem
             android:layout_width="wrap_content"
+            android:textSize="10sp"
+            android:layout_height="wrap_content"
+            />
+
+        <com.google.android.material.tabs.TabItem
+            android:id="@+id/today_tab"
+            android:layout_width="wrap_content"
+            android:textSize="10sp"
             android:layout_height="wrap_content"
             />
 
         <com.google.android.material.tabs.TabItem
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:icon="@drawable/ic_date"
-            />
-
-        <com.google.android.material.tabs.TabItem
-            android:layout_width="wrap_content"
+            android:textSize="10sp"
             android:layout_height="wrap_content" />
 
     </com.google.android.material.tabs.TabLayout>
@@ -177,67 +184,65 @@
         android:id="@+id/order_filter_buttons"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
         android:orientation="horizontal"
         app:layout_constraintTop_toBottomOf="@+id/tabLayout">
 
 
         <androidx.appcompat.widget.AppCompatButton
             android:layout_width="150dp"
-            android:layout_height="32dp"
+            android:layout_height="40dp"
+            android:layout_marginHorizontal="12dp"
+            android:layout_marginVertical="4dp"
+            android:background="@drawable/sort_button_radius"
+            android:drawableStart="@drawable/ic_sort_btn"
+            android:drawablePadding="-12dp"
+            android:gravity="center"
             android:paddingHorizontal="24dp"
             android:text="Sırala"
-            android:layout_marginVertical="4dp"
-            android:layout_marginHorizontal="12dp"
-            android:background="@drawable/sort_button_radius"
-            android:gravity="center"
-            android:drawablePadding="-12dp"
-            android:drawableStart="@drawable/ic_sort_btn"
-            android:textSize="14sp"
             android:textColor="@color/white"
-            />
+            android:textSize="14sp" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:layout_width="150dp"
-            android:layout_height="32dp"
+            android:layout_height="40dp"
+            android:layout_marginHorizontal="6dp"
+            android:layout_marginVertical="4dp"
+            android:background="@drawable/sort_button_radius"
+            android:drawableStart="@drawable/ic_filter_btn"
+            android:drawablePadding="-12dp"
+            android:gravity="center"
             android:paddingHorizontal="24dp"
             android:text="Filtrele"
-            android:layout_marginVertical="4dp"
-            android:layout_marginHorizontal="6dp"
-            android:background="@drawable/sort_button_radius"
-            android:gravity="center"
-            android:drawablePadding="-12dp"
-            android:drawableStart="@drawable/ic_filter_btn"
-            android:textSize="14sp"
             android:textColor="@color/white"
-            />
+            android:textSize="14sp" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:layout_width="wrap_content"
-            android:layout_height="32dp"
-            android:paddingHorizontal="24dp"
-            android:layout_marginVertical="4dp"
+            android:layout_height="40dp"
             android:layout_marginHorizontal="6dp"
+            android:layout_marginVertical="4dp"
             android:background="@drawable/sort_button_radius"
             android:backgroundTint="@color/light_blue"
-            android:gravity="center"
-            android:drawablePadding="-12dp"
             android:drawableStart="@drawable/ic_notification"
-            android:textSize="14sp"
+            android:drawablePadding="-12dp"
+            android:gravity="center"
+            android:paddingHorizontal="24dp"
             android:textColor="@color/white"
-            />
+            android:textSize="14sp" />
 
 
     </androidx.appcompat.widget.LinearLayoutCompat>
 
 
-
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/viewPager"
         android:layout_width="match_parent"
-        android:backgroundTint="@color/light_gray"
         android:layout_height="0dp"
         android:layout_below="@id/order_filter_buttons"
         android:layout_centerInParent="true"
+        android:layout_marginTop="6dp"
+        android:backgroundTint="@color/light_gray"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
